@@ -57,13 +57,17 @@
         <short>The directory structure for the files</short>
         <long>
         %at -- album title
-	%aT -- album title (lowercase)
+        %aT -- album title (lowercase)
         %aa -- album artist
-	%aA -- album artist (lowercase)
+        %aA -- album artist (lowercase)
+        %as -- album artist (sortable)
+        %aS -- album artist (sortable lowercase)
         %tt -- track title
-	%tT -- track title (lowercase)
+        %tT -- track title (lowercase)
         %ta -- track artist
-	%tA -- track artist (lowercase)
+        %tA -- track artist (lowercase)
+        %ts -- track artist (sortable)
+        %tS -- track artist (sortable lowercase)
         </long>
       </locale>
     </schema>
@@ -79,15 +83,19 @@
         <long>
         Do not specify an extension.
         %at -- album title
-	%aT -- album title (lowercase)
+        %aT -- album title (lowercase)
         %aa -- album artist
-	%aA -- album artist (lowercase)
+        %aA -- album artist (lowercase)
+        %as -- album artist (sortable)
+        %aS -- album artist (sortable lowercase)
         %tn -- track number (i.e 8)
         %tN -- track number, zero padded (i.e 08)
         %tt -- track title
-	%tT -- track title (lowercase)
+        %tT -- track title (lowercase)
         %ta -- track artist
-	%tA -- track artist (lowercase)
+        %tA -- track artist (lowercase)
+        %ts -- track artist (sortable)
+        %tS -- track artist (sortable lowercase)
         </long>
       </locale>
     </schema>
