@@ -1,5 +1,10 @@
 2006-04-14  Ross Burton  <ross@burtonini.com>
 
+	* data/sound-juicer.schemas.in:
+	Update pattern docs (#337638).
+
+2006-04-14  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-about.c:
 	Update about dialog (#328181, Brian Pepple)
 
